--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="templates/css/main.css">
 </head>
 
 <body>
